💄 Design: #52 공통컴포넌트 구현 - 모달

--- a/src/components/common/Modal/Modal.module.css
+++ b/src/components/common/Modal/Modal.module.css
@@ -13,14 +13,16 @@
 
 .modal p {
   position: relative;
-  padding: 5px 35px;
+  padding: 12px 62px;
   font-weight: bold;
+  font-size: 16px;
 }
 
 .modal button {
   width: 100%;
   border: none;
-  padding: 8px;
+  padding: 14px;
+  font-size: 16px;
 }
 
 .modal .button-container {
